--- a/templates/base.html
+++ b/templates/base.html
@@ -18,41 +18,48 @@
     </head>
 	<body>
         <nav class="navbar navbar-default navbar-static-top">
-              <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                  <div class="row">
-                        <div class="col-md-4 col-sm-6 col-xs-8">
-                              <div class="navbar-header">
+            <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 col-xs-8">
+                          <div class="navbar-header">
 
-                                  <a class="navbar-brand" href="http://www.churchsupport.org">
-                                      <img alt="Brand" id="logo" src="{% static 'img/logo1.png' %}" class="img-responsive">
-                                  </a>
+                              <a class="navbar-brand" href="http://www.churchsupport.org">
+                                  <img alt="Brand" id="logo" src="{% static 'img/logo1.png' %}" class="img-responsive">
+                              </a>
 
-                              </div>
-                        </div>
-                        <div class="col-md-8 col-sm-6 col-xs-4">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                  </button>
-                            <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                          </div>
+                    </div>
+                    <div class="col-md-8 col-sm-6 col-xs-4">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                              </button>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
-                              <ul class="nav navbar-nav navbar-right">
-                                <li><a href="/">Home</a></li>
-                                <li><a href="/churchForm">Need Your Help</a></li>
-                                <li><a href="/volunteerForm">Want To Help</a></li>
-                                <li><a href="/login">Log In</a></li>
-                              </ul>
-                            </div><!-- /.navbar-collapse -->
-                      </div>
-                  </div>
-              </div><!-- /.container-fluid -->
-            </nav>
+                            <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{% url 'home:index' %}">Home</a></li>
+                            <script>
+                                console.log("{{ user }}");
+                            </script>
+                            {% if user.is_authenticated %}
+                                <li><a href="{% url 'home:logout' %}">Logout</a></li>
+                            {% else %}
+                            <li><a href="{% url 'home:churchForm' %}">Need Your Help</a></li>
+                            <li><a href="{% url 'home:volunteerForm' %}">Want To Help</a></li>
+                            <li><a href="{% url 'home:login' %}">Log In</a></li>
+                            {% endif %}
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+                    </div>
+                </div>
+            </div><!-- /.container-fluid -->
+        </nav>
 		<div class="container main-content">
 
             {% block content %}
