--- a/templates/home/churchMinForm.html
+++ b/templates/home/churchMinForm.html
@@ -9,7 +9,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
 					<div class="jumbotron">
-                        <form action="{% url 'home:churchMinForm' id %}" method="post">
+                        <form action="{% url 'home:churchMinForm' %}" method="post">
                         {% csrf_token %}
                             {% if form.non_field_errors %}
                                 <div class="row">
@@ -49,7 +49,6 @@
                             $(this).parent().parent().remove();
                         });
                         {% for min in ministries %}
-                            console.log("{{ min.id }}");
                             select.append($("<option value=\"{{min.id}}\">{{min}}</option>"));
                         {% endfor %}
                         var row2 =   $("<div class=\"row\"></div>");
