--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -4,13 +4,18 @@
     <div class="row">
         <div class="col-md-12">
 
-            <form action="#" method="post">
+            <form action="{% url 'home:login' %}" method="post">
                 {% csrf_token %}
                 <div class="form-signin jumbotron">
+                   {% if form.non_field_errors %}
+                        <div class="container bg-danger" style="padding-left:10px">
+                            <b>{{ form.non_field_errors }}</b>
+                        </div>
+                    {% endif %}
                     <h2>Sign In</h2>
                     <hr>
-                    <input type="text" class="form-control" id="user" placeholder="Username">
-                    <input type="password" class="form-control" id="pass" placeholder="Password">
+                    <input type="text" class="form-control" name="username" id="user" placeholder="Username">
+                    <input type="password" class="form-control" name="password" id="pass" placeholder="Password">
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" value="remember">
